--- a/static/index.html
+++ b/static/index.html
@@ -7,25 +7,46 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script defer src="app.js" type="module"></script>
         <link href="styles.css" rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Charm&display=swap" rel="stylesheet">
         <title>D&D Character Sheet</title>
     </head>
 <body>
-    <div id="head-container">
-        <button id="all-characters">Character List</button>
-        <form id="character-search">
-            <input type="text" name='search' placeholder="Search Characters By Name" required/>
-            <button type="submit" id="submit">Search</button>
-        </form>
-        <form id="delete-character">
-            <input type="text" name='delete' placeholder="Delete Character" required/>
-            <button type="submit" id="delete">Delete</button>
-        </form>
-        <button id="create-character">Create A New Character</button>
-    </div>
-    <div id="body-container">
-        <div id="left-container">left container - Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores corrupti nam veritatis debitis! Eligendi quas dicta eaque unde sint culpa. In sunt earum qui voluptas provident quam cumque. Quo, sint!</div>
-        <div id="center-container">center container - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt quam sapiente beatae voluptate maiores! Minima, facilis asperiores. Eveniet laboriosam explicabo excepturi, natus ad repudiandae modi asperiores tempora repellendus vel magni?</div>
-        <div id="right-container">right container - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia autem repellat harum provident vero consequuntur eius, tempore libero odit doloremque ipsum minima nihil sed. Saepe repellat vero ex quod sunt.</div>
-    </div>
+    <nav class="navbar navbar-dark bg-dark justify-content-md-end">
+        <div class="container1">
+            <div id="btn-container">
+                <button type="button" class="btn btn-outline-primary" id="all-characters">Character List</button>
+                <button type="button" class="btn btn-outline-primary" id="create-character">Create A New Character</button>
+                <div id="head-container d-grid gap-2 d-md-flex justify-content-md-end">
+                    <form id="character-search">
+                        <input type="text" name='search'  class="btn btn-outline-primary" placeholder="Search By Name" required/>
+                        <button type="submit" id="submit" class="btn btn-outline-primary">Search</button>
+                    </form>
+                    <form id="delete-character">
+                        <input type="text" name='delete' class="btn btn-outline-primary"placeholder="Delete Character" required/>
+                        <button type="submit" id="delete" class="btn btn-outline-primary">Delete</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div id="black">
+        <div id="body-container">
+   
+            <div id="contains-left">
+                <div id="left-container"></div>
+            </div>
+            <div id="contains-center">
+                <div id="center-container"></div>
+            <!-- </div> -->
+            <!-- <div id="right-container"></div> -->
+        </div>
+        </div>
+        <div id="footer" class="card-footer text-muted">
+            Created By: Alexander Cobble
+          </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
