--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,9 @@
         </div>
         <div id="footer" class="card-footer text-muted">
             Created By: Alexander Cobble
+            <audio id="audio" controls autoplay loop>
+                <source src="/music/background_music.mp3" type="audio/mp3">
+            </audio>
           </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
